Changed div element to header element in header of page, changed div element that contained ul to section element, and altered header selectors in styling page replacing div with section

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 
 <body>
-    <div class="header">
+    <header class="header">
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <section class="header">
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,9 +22,9 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
-    <div class="hero" title="Meeting of four people gathered around a table and reviewing documents"></div>
+        </section>
+    </header>
+    <section class="hero" title="Meeting of four people gathered around a table and reviewing documents"></section>
     <div class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with notebook that has a cloud in the center with the acronym 'SEO' for Search Engine optimization, the cloud is surrounded by elements that will increase a businesses Search Engine optimization: Backlink, Content, Headings, Mobile Compatibility, Social Media, and Link Buiding" class="float-left" />
