--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
             </p>
         </aside>
     </section>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <section class="benefits">
+        <aside class="benefit-lead">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Half a cog connected to the wide end of a funnel that has an arrow pointing down in the center. At the amll end of the funnel is a circle with a dollar sign in the center" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </aside>
+        <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="light bulb wearing a tie with semi cirular waves coming from head to indicate awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </aside>
+        <aside class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cog where the top half is a regualr cog and the bottom half is made of dollar signs" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </div>
+        </aside>
+    </section>
     <div class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
