--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             </p>
         </aside>
     </section>
-    <div class="footer">
+    <footer class="footer">
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
