Removed the following selectors in HTML and CSS files and replaced with .benefit-block, .benefit-block h3, and .benefit-block img: .benefit-lead, .benefit-lead h3, .benefit-lead img, .benefit-brand, .benefit-brand h3, .benef it-brand img, .benefit-cost, .beneft-cost h3, .benefit-cost img

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
         </aside>
     </section>
     <section class="benefits">
-        <aside class="benefit-lead">
+        <aside class="benefit-block">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt="Half a cog connected to the wide end of a funnel that has an arrow pointing down in the center. At the amll end of the funnel is a circle with a dollar sign in the center" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
-        <aside class="benefit-brand">
+        <aside class="benefit-block">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="light bulb wearing a tie with semi cirular waves coming from head to indicate awareness" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
-        <aside class="benefit-cost">
+        <aside class="benefit-block">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Cog where the top half is a regualr cog and the bottom half is made of dollar signs" />
             <p>
