Changed aside elements to article elements for sections containing search-engine-optimization, online-reputation-management, and social-media-marketing. Also changed height property in hero class to 700px

--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
     </header>
     <section class="hero" title="Meeting of four people gathered around a table and reviewing documents"></section>
     <section class="content">
-        <aside id="search-engine-optimization" class="content-block">
+        <article id="search-engine-optimization" class="content-block">
             <img src="./assets/images/search-engine-optimization.jpg" alt="Desk with notebook that has a cloud in the center with the acronym 'SEO' for Search Engine optimization, the cloud is surrounded by elements that will increase a businesses Search Engine optimization: Backlink, Content, Headings, Mobile Compatibility, Social Media, and Link Buiding" class="float-left" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </aside>
-        <aside id="online-reputation-management" class="content-block">
+        </article>
+        <article id="online-reputation-management" class="content-block">
             <img src="./assets/images/online-reputation-management.jpg" alt="Laptop with screen displaying The title 'Reputation', a bar graph showing an increase from January to December, three circular percentge charts, and two pie charts" class="float-right" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </aside>
-        <aside id="social-media-marketing" class="content-block">
+        </article>
+        <article id="social-media-marketing" class="content-block">
             <img src="./assets/images/social-media-marketing.jpg" alt="top-down view of table with pictures of social media icons (like, repost, search, music symbols etc.) and the social media buzzwords 'LIKE', 'TWEET', 'MEDIA', 'SHARE'" class="float-left" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </aside>
+        </article>
     </section>
     <section class="benefits">
         <aside class="benefit-block">
